@@ -28,6 +28,15 @@ HOW TO UPDATE?
 
 Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.1.2b0
 
+New Features:
+
+- Plots: Adding series will update an existing series if the names match.
+         No need to clear plot #163
+
+New Commands:
+
+- Plot:    Can now delete series in a plot "delete_series" #163
+
 Fixes:
 
 - Themes:   Fixed theme/custom settings inconsistency #165
